# mock-whatsapp-backend

./: README.md  bun.lockb  package.json  pyproject.toml
app/: ai.py  embeddings.py  main.py
app/agent/: SYSTEM.txt  agent.py  tools.py  utils.py
app/database/: db.py  engine.py  models.py
app/tools/: generate_exercise.py  registry.py  search_knowledge.py
